ajout du profil et de l'accès depuis le serveur

--- a/templates/profil.html
+++ b/templates/profil.html
@@ -25,7 +25,8 @@
     <br>
     <form action="import_eleve" method="post">
         <label for="fichier">Entrez un fichier csv avec les identifiants de vos élèves :</label>
-        <input id="fichier" name="fichier" type="file" accept=".csv,text/csv" required>
+        <input id="fichier" name="fichier" type="file" accept=".csv,text/csv" required><br>
+        <input type = "submit" value = "Valider" />
     </form>
     <br>
 </div>
