--- a/templates/feuille.html
+++ b/templates/feuille.html
@@ -27,9 +27,10 @@
 		<div class="nom">QuizTio</div>
     <ul class="menu">
         <li>
-            Invité
+            {{Username}}
             <ul class="sousMenu">
                 <li><a href="/">Accueil</a></li>
+				<li><a href="profil">Profil</a></li>
                 <li><a href="BDD">Liste de vos questions</a></li>
                 <li><a href="creationQuestion">Créer une question</a></li>
                 <li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
