modif du menu déroulant pour accéder au profil des profs

--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -149,6 +149,7 @@
 				{{Username}}
 				<ul class="sousMenu">
 					<li><a href="/">Accueil</a></li>
+					<li><a href="profil">Profil</a></li>
 					<li><a href="BDD">Liste de vos questions</a></li>
 					<li><a href="creationQuestion">Créer une question</a></li>
 					<li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
