--- a/templates/profil.html
+++ b/templates/profil.html
@@ -23,9 +23,9 @@
   </ul>
 <div id="mid">
     <br>
-    <form action="import_eleve" method="post">
+    <form action="import_eleve" method="post" enctype="multipart/form-data">
         <label for="fichier">Entrez un fichier csv avec les identifiants de vos élèves :</label>
-        <input id="fichier" name="fichier" type="file" accept=".csv,text/csv" required><br>
+        <input id="fichier" name="fichier" type="file" accept=".csv,text/csv"  required><br>
         <input type = "submit" value = "Valider" />
     </form>
     <br>
