modif acceuil acceuil_connecte_etu

--- a/templates/acceuil_connecte_etu.html
+++ b/templates/acceuil_connecte_etu.html
@@ -13,8 +13,11 @@
     <div class="nom">QuizTio</div>
     <ul class="menu">
         <li>
-            Invité
-            <ul class="sousMenu">Id questiona></li>
+            {{Username}}
+            <ul class="sousMenu">
+                <li><a href="/">Accueil</a></li>
+                <li><a href="profil">Profil</a></li>
+                <li><a href="deco">Se déconnecter</a></li>
             </ul>
         </li>
     </ul>
