--- a/templates/changement_mdp_etu.html
+++ b/templates/changement_mdp_etu.html
@@ -21,17 +21,13 @@
             </ul>
         </li>
     </ul>
-
-<div class="log_reg"><br>
-    <form action = "" method = "post">
-        <h1>Questionnaire</h1>
-        <div class="entree">
-            <label for="idquest">entrez un id de question ou questionnaire: </label><br>
-            <input type="text" name="idquest" minlength="8" maxlength="8" placeholder="id question" required><br>
-            <input type="submit" value="ok"/>
-            <a href="changement_mdp_etu">changer mdp</a>
-        </div>
-    </form>
-</div>
+    <div class="log_reg"><br>
+        <form action = "" method = "post">
+            <h1>changement de mot de passe</h1>
+            <div class="entree">
+                <label for="idquest">entre ton nouveau mot de passe: </label><br>
+                <input type="password" name="newMdp" minlength="8" maxlength="8" placeholder="mot de passe" required><br>
+                <input type="submit" value="ok"/>
+            </div>
+        </form>
 </body>
-</html>
