--- a/templates/login.html
+++ b/templates/login.html
@@ -29,8 +29,8 @@
         <div class="erreurLog">Nom d'utilisateur ou mot de passe incorrect</div>
         {%endif%}
         <div class="entree">
-            <label for="idUser">Entrez votre nom d'utilisateur : </label><br>
-            <input type="text" name="idUser" minlength="2" placeholder="Nom d'utilisateur" required>
+            <label for="idUser">Entrez votre identifiant : </label><br>
+            <input type="text" name="idUser" minlength="2" placeholder="Identifiant" required>
         </div>
         <div class="entree">
             <label for="name">Entrez votre mot de passe : </label><br>
