--- a/templates/profil.html
+++ b/templates/profil.html
@@ -30,6 +30,10 @@
         <input type = "submit" value = "Valider" />
     </form>
     <br>
+    <form>
+      <label>Liste des Séquences :</label>
+      
+    </form>
 </div>
 
 <!--
