ajout du lien de creationSequence et ajout du champ supprimé des étiquettes de creationQuestion

--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -110,6 +110,7 @@ function addEti(){
                 <li><a href="BDD">Liste de vos questions</a></li>
                 <li><a href="creationQuestion">Créer une question</a></li>
                 <li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
+                <li><a href="creationSequence">Créer une séquence</a></li>
                 <li><a href="deco">Se déconnecter</a></li>
             </ul>
         </li>
@@ -124,7 +125,7 @@ function addEti(){
     <div id="listeEti">
         <input type="text" id="neti">
         <input type="button" value="nouvelle etiquette" onclick=addEti()>
-        
+        <input type="text" id="etiquettes" name="etiquettes"><!--- TEMPORAIIIIIIIIRE !!!!!!!!!-->
     </div>
 
     
