--- a/templates/acceuil_connecte_etu.html
+++ b/templates/acceuil_connecte_etu.html
@@ -23,13 +23,12 @@
     </ul>
 
 <div class="log_reg"><br>
-    <form action = "" method = "post">
+    <form action = "afficheSequence/" method = "post">
         <h1>Questionnaire</h1>
         <div class="entree">
             <label for="idquest">entrez un id de question ou questionnaire: </label><br>
             <input type="text" name="idquest" minlength="8" maxlength="8" placeholder="id question" required><br>
             <input type="submit" value="ok"/>
-            <a href="changement_mdp_etu">changer mdp</a>
         </div>
     </form>
 </div>
