--- a/templates/acceuil_connecte_etu.html
+++ b/templates/acceuil_connecte_etu.html
@@ -6,7 +6,13 @@
   <link rel="stylesheet" href="static/log-reg.css">
   <script></script>
   <title>QuizTio</title>
-  <script></script>
+  <script>
+    function redirect_Seq(){
+        sequence=document.getElementById("idquest").textContent
+        location.replace("/afficheSequence/"+sequence)
+    }
+
+  </script>
 </head>
 <body>
     
@@ -23,12 +29,12 @@
     </ul>
 
 <div class="log_reg"><br>
-    <form action = "afficheSequence/" method = "post">
+    <form action = "" method = "post">
         <h1>Questionnaire</h1>
         <div class="entree">
             <label for="idquest">entrez un id de question ou questionnaire: </label><br>
-            <input type="text" name="idquest" minlength="8" maxlength="8" placeholder="id question" required><br>
-            <input type="submit" value="ok"/>
+            <input type="text" id="idquest" name="idquest" minlength="8" maxlength="8" placeholder="id question" required><br>
+            <input type="button" value="ok" onclick="redirect_Seq()"/>
         </div>
     </form>
 </div>
