modifs sequences pour avoir les reponses des eleve

--- a/templates/acceuil_connecte_etu.html
+++ b/templates/acceuil_connecte_etu.html
@@ -8,7 +8,7 @@
   <title>QuizTio</title>
   <script>
     function redirect_Seq(){
-        sequence=document.getElementById("idquest").textContent
+        sequence=document.getElementById("idquest").value
         location.replace("/afficheSequence/"+sequence)
     }
 
