--- a/templates/acceuil_connecte_etu.html
+++ b/templates/acceuil_connecte_etu.html
@@ -32,8 +32,8 @@
     <form action = "" method = "post">
         <h1>Questionnaire</h1>
         <div class="entree">
-            <label for="idquest">entrez un id de question ou questionnaire: </label><br>
-            <input type="text" id="idquest" name="idquest" minlength="8" maxlength="8" placeholder="id question" required><br>
+            <label for="idquest">Entrez un identifiant de qu'un professeur a partagé : </label><br>
+            <input type="text" id="idquest" name="idquest" minlength="8" maxlength="8" placeholder="Identifiant" required><br>
             <input type="button" value="ok" onclick="redirect_Seq()"/>
         </div>
     </form>
