--- a/templates/acceuil_connecte_etu.html
+++ b/templates/acceuil_connecte_etu.html
@@ -33,7 +33,11 @@
         <h1>Questionnaire</h1>
         <div class="entree">
             <label for="idquest">Entrez un identifiant de qu'un professeur a partagé : </label><br>
+            {%if pas_bon%}
+                <span style="color: red;">Il semblerez que la sequence n'existe pas, veuillez verifier le code ou reessayer</span>
+            {%endif%}
             <input type="text" id="idquest" name="idquest" minlength="8" maxlength="8" placeholder="Identifiant" required><br>
+            
             <input type="button" value="ok" onclick="redirect_Seq()"/>
         </div>
     </form>
