--- a/templates/changement_mdp_etu.html
+++ b/templates/changement_mdp_etu.html
@@ -6,7 +6,15 @@
   <link rel="stylesheet" href="static/log-reg.css">
   <script></script>
   <title>QuizTio</title>
-  <script></script>
+  <script>
+    function checkNewMdp(){
+        if (document.getElementById("MDP").value != document.getElementById("MDP2").value){
+            document.getElementById("labelError").innerHTML="Les deux mots de passe doivent être les même";
+            return false;
+        }
+
+    }
+  </script>
 </head>
 <body>
     
@@ -25,9 +33,12 @@
         <form action = "" method = "post">
             <h1>changement de mot de passe</h1>
             <div class="entree">
-                <label for="idquest">entre ton nouveau mot de passe: </label><br>
-                <input type="password" name="newMdp" minlength="8" maxlength="8" placeholder="mot de passe" required><br>
-                <input type="submit" value="ok"/>
+                <label>entre ton nouveau mot de passe: </label><br>
+                <input type="password" name="newMdp" id="MDP" minlength="1" placeholder="mot de passe" required><br>
+                <input type="password" name="newMdp" id="MDP2" minlength="1" placeholder="une deuxième fois" required><br>
+                <label id="labelError" style="color:red"></label><br><br>
+                <input type="submit" value="ok" onclick='return checkNewMdp();' />
             </div>
         </form>
+    </div>
 </body>
