--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -166,7 +166,7 @@
 						<th>ID</th><th>Etiquettes</th>
 						<th>Enoncé</th>
 						<th>Reponses Possibles</th>
-						<th>Bonnes reponses</th><th>Visualiser</th><th>Modifier</th><th>Supprimer</th>
+						<th>Bonnes reponses</th><th>Demarrer</th><th>Visualiser</th><th>Modifier</th><th>Supprimer</th>
 					</tr>
 				</thead>
 				{% for dico in li_dictionnaire: %}
@@ -178,6 +178,7 @@
 					</td><td class="enonce_tableau">{{dico["Question"]| safe}}</td>
 					<td class="rep_tableau">{% for rep in dico["REP"]: %}{{rep| safe}}{%endfor%}</td>
 					<td class="brep_tableau">{% for rep in dico["BREP"]: %}{{rep| safe}}{%endfor%}</td>
+					<td class="visu_tableau"><a href="afficheSequence/{{dico["ID"]}}"><img src="/static/visu.png"></a></td>
 					<td class="visu_tableau"><a href="question/{{dico["ID"]}}"><img src="/static/visu.png"></a></td>
 					<td class="modif_tableau"><a href="modificationQuestion/{{dico["ID"]}}"><img src="/static/modif.png"></td>
 					<td class="supp_tableau"><a href="supprimer/{{dico["ID"]}}"><img src="/static/supp.png"></td>
