début modifs stats

--- a/templates/profil.html
+++ b/templates/profil.html
@@ -30,6 +30,7 @@
         <input id="fichier" name="fichier" type="file" accept=".csv,text/csv"  required><br>
         <input type = "submit" value = "Valider" />
     </form>
+    <a href="Historique"><button>Historique</button></a>
     <br>
     <form>
       <label>Liste des Séquences :</label><br>
