--- a/templates/statsProf.html
+++ b/templates/statsProf.html
@@ -125,7 +125,7 @@
 				
 				<td class="circonstance">{{entree[3]}}</td>
 				<script></script>
-				<td class="supprimer"><a href='../supprimerHisto/{{entree|replace("/","delimiteur")}}/{{idQ}}'><button>Supprimer</button></a></td>
+				<td class="supprimer"><a href='../supprimerHistoEt/{{entree|replace("/","delimiteur")}}/{{idQ}}/{{key}}'><button>Supprimer</button></a></td>
 
 				</tr>
 				{%endfor%}{%endfor%}
