--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -154,6 +154,7 @@
 					<li><a href="creationQuestion">Créer une question</a></li>
 					<li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
 					<li><a href="creationSequence">Créer une séquence</a></li>
+					<li><a href="generationControles">Créer des contrôles</a></li>
 					<li><a href="deco">Se déconnecter</a></li>
 				</ul>
 			</li>
@@ -185,14 +186,6 @@
 					</tr>
 				{% endfor %}
 			</table>
-		</div><!--
-		<div id="bot">
-			<a href="./">Acceuil</a>
-			<a href="register">S'enregistrer</a>
-			<a href="login">Se connecter</a>
-			<a href="creationQuestion">Creer une question</a>
-			<a href="BDD">Liste de vos questions</a>
-			<a href="creationFeuille">Creer une feuille d'exercice</a>
-		</div>-->
+		</div>
 	</body>
 </html>
