--- a/templates/affichageControle.html
+++ b/templates/affichageControle.html
@@ -28,11 +28,7 @@
     <ul class="menu">
         <li>
             {{Username}}
-            <ul class="sousMenu">
-                <li><a href="/">Accueil</a></li>
-				<li><a href="profil">Profil</a></li>
-                <li><a href="BDD">Liste de vos questions</a></li>
-                <li><a href="creationQuestion">Créer une question</a></li>
+            <ul class="sli_finalref="creationQuestion">Créer une question</a></li>
                 <li><a href="creationFeuille">Créer une feuille d'exercices</a></li>
 				<li><a href="creationSequence">Créer une séquence</a></li>
 				<li><a href="deco">Se déconnecter</a></li>
@@ -75,9 +71,11 @@
 						{%endfor%}</td>
 					</tr>
 					
-				{% endfor %}<div style="page-break-before:always">&nbsp;</div> 
 				{% endfor %}
-			</table>
+			</table><div style="page-break-before:always">&nbsp;</div> 
+				{% endfor %}
+				
+				
 		</div>
 	</body>
 </html>
